# spot-isaac-sim-hospital

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/: FUNDING.yml
assets/: README.md  isaac_hospital_scene_spot.usd  isaac_hospital_scene_spot_w_characters.usd  isaac_hospital_scene_spot_w_characters_6.usd  people_initial_commands.yaml  scene_positions.txt
assets/behavior_tree_characters/Female_nurse_02/: female_adult_medical_01.usd
assets/behavior_tree_characters/Female_patient_03/: F_Medical_01.usd
assets/behavior_tree_characters/Female_police_01/: female_adult_police_01.usd
assets/behavior_tree_characters/Female_visitor_01/: female_adult_police_03_new.usd
assets/behavior_tree_characters/Female_visitor_02/: female_adult_police_01_new.usd
assets/behavior_tree_characters/Female_visitor_03/: F_Business_02.usd
assets/behavior_tree_characters/Female_visitor_04/: female_adult_business_02.usd
assets/behavior_tree_characters/Male_nurse_03/: male_adult_medical_01.usd
docs/: MODIFY_WORLD.md  PEOPLE_INITIAL_COMMANDS.md
env/: spot_isaac.env.template
isaac_sim/: export_tf_pose.py  list_graphs.py  people_control_sim.py  spot_bridge_with_people.py  spot_standalone.py
ros2_ws/src/spot_hospital_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/spot_hospital_bringup/launch/: robot_state_publisher.launch.py
ros2_ws/src/spot_hospital_bringup/maps/: spot_hospital_map.yaml
ros2_ws/src/spot_hospital_bringup/urdf/: spot.urdf
scripts/: dump_scene_positions.py  run_isaac.sh  run_people_sim.sh  run_ros2.sh  run_spot_bridge_with_people.sh
(+4 files in other folders)
