<?xml version="1.0"?>
<package format="3">
  <name>spot_hospital_bringup</name>
  <version>0.1.0</version>
  <description>Launch, URDF, and map files for Spot in the Isaac Sim hospital scene.</description>
  <maintainer email="rockyroadstudio@outlook.com">S.Joy</maintainer>
  <author email="rockyroadstudio@outlook.com">S.Joy — Rocky Road Studio (https://rockyroad.studio)</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
